--- a/insc/assets/css/menu.css
+++ b/insc/assets/css/menu.css
@@ -49,7 +49,7 @@
 
 .sidebar .nav-links li a.active {background-color: #081D45 ;}
 
-.sidebar .nav-links li a:hover {background-color: #081d45;}
+.sidebar .nav-links li a:hover {background-color: #8A8AFF;}
 
 .sidebar .nav-links li i {
 	min-width: 60px;
