--- a/insc/assets/css/geral.css
+++ b/insc/assets/css/geral.css
@@ -146,7 +146,7 @@ textarea {resize: none;}
 }
 
 .card {
-	width: 45%;
+		width: 45%;
   	max-width: 90%;
   	margin: 20px auto 0;
   	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -154,6 +154,7 @@ textarea {resize: none;}
   	border-radius: 10px;
   	background: #ffffff;
 }
+
 
 #list-details {list-style: none; color: #696969}
 #list-content{margin-top: 20px}
@@ -234,4 +235,53 @@ textarea {resize: none;}
 
 #searchbarOcurrence, #searchbarClient {
 	padding: 5px;
+}
+
+.card-container {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 10px;
+  display: flex;
+  flex-flow: row wrap;
+}
+.card-container:hover .card {
+  opacity: .7;
+  cursor: pointer;
+  filter: grayscale(1);
+}
+.card-container .card {
+  margin: 10px;
+  width: calc(100% / 3 - 20px);
+  float: left;
+  box-shadow: 0 0 2px 2px rgba(0,0,0,.05);
+  background: #FFF;
+  -webkit-transition: .3s all ease;
+  transition: .15s all ease;
+}
+.card-container .card:hover {
+  box-shadow: 0 0 8px 3px rgba(0,0,0,.15);
+  transform: scale(1.025);
+  opacity: 1;
+  filter: grayscale(0);
+  transition: .35s all ease;
+}
+.card-container .card img {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+.card-container .card .content {
+  padding: 15px 20px;
+}
+.card-container .card h3 {
+  font: 2.8rem/3.4rem 'Bree Serif', serif;
+  padding: 0;
+  margin: 0 0 10px;
+  letter-spacing: -.075rem
+}
+.card-container .card p {
+  color: #888;
+  padding: 0;
+  margin: 0;
+  font: 400 1.6rem/2.2rem 'Open Sans script=all', sans-serif;
 }
