--- a/insc/assets/css/loginRegister.css
+++ b/insc/assets/css/loginRegister.css
@@ -1,15 +1,23 @@
 #bodyLoginRegister {
-
+  background-color: #C5C5C5;
 }
 
 #divLoginRegister {
     max-width: 500px;
     margin: auto;
+    margin-top: 150px;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 50px;
+    color: gray;
 }
 
-#divLoginRegister form {
-
-
+#divLoginRegister h2{
+  font-family: Anton, sans-serif;
+  color: gray;
+  letter-spacing: 2px;
+  font-weight: 500;
+  text-align: center;
 }
 
 #divLoginRegister form label {
@@ -23,6 +31,7 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
+    outline: none;
 }
 
 #divLoginRegister form button {
