--- a/insc/assets/css/loginRegister.css
+++ b/insc/assets/css/loginRegister.css
@@ -1,15 +1,23 @@
 #bodyLoginRegister {
-  background-color: #C5C5C5;
+  background-color: #7EC8E3;
+}
+
+#inscLogo {
+  width: 100px;
+  display: block;
+  margin: auto;
+  margin-bottom: 10px;
+
 }
 
 #divLoginRegister {
-    max-width: 500px;
-    margin: auto;
-    margin-top: 150px;
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 50px;
-    color: gray;
+  max-width: 500px;
+  margin: auto;
+  margin-top: 150px;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 50px;
+  color: gray;
 }
 
 #divLoginRegister h2{
@@ -21,40 +29,40 @@
 }
 
 #divLoginRegister form label {
-    padding: 12px 12px 12px 0;
-    display: inline-block;
+  padding: 12px 12px 12px 0;
+  display: inline-block;
 }
 
 #divLoginRegister form input{
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: vertical;
-    outline: none;
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+  outline: none;
 }
 
 #divLoginRegister form button {
-    background-color: #2E2EFF;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    float: right;
-    margin-top: 10px;
+  background-color: #2E2EFF;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+  margin-top: 10px;
 }
 
 #divLoginRegister form button:hover {background-color: #5C5CFF ;}
 
 #criarConta-link button {
-    background-color: #2E2EFF;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 10px;
+  background-color: #2E2EFF;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
 }
 
 #criarConta-link button:hover {background-color: #5C5CFF }
